# WarpX

./: .env.example  .gitignore  LICENSE  README.md  claude_desktop_config.json  install.bat  pyproject.toml  requirements.txt  start.bat
src/web_mcp/: __init__.py  __main__.py  browser.py  config.py  fetch.py  images.py  search.py  server.py  utils.py
tests/: smoke_stdio.py  test_config.py  test_fetch.py  test_utils.py
tests/fixtures/: sample.html
